# neural-simulator

./: .gitignore  README.md  pyproject.toml
benchmarks/: template_speed.py
data/frontier/: test_20.jsonl  test_30.jsonl  test_45.jsonl  train_narrow.jsonl  train_wide.jsonl  val.jsonl
data/hard-topology-pilot/: metadata.json  test.jsonl  train.jsonl  validation.jsonl
data/ood-topology-pilot/: metadata.json  test.jsonl  train.jsonl  validation.jsonl
examples/: scenario.json
results/: frontier_narrow_performer.json  frontier_wide_performer.json  frontier_wide_performer_nopos.json  gps_experiment.json  machines_1000orders.json  multiscale_experiment.json
scripts/: frontier_experiment.py  gen_frontier_data.py  machines_sweep.py  machines_sweep_chart.py  reproduce_frontier.py  results_chart.py  train_gps.py  train_multiscale.py
src/neural_simulator/: __init__.py  cli.py
src/neural_simulator/data/: __init__.py  dataset.py
src/neural_simulator/evaluation/: __init__.py  baseline_scorecard.py  graph_transformer.py  heuristic.py  metrics.py
src/neural_simulator/graphs/: __init__.py  graph_dict.py  pyg.py  template.py
src/neural_simulator/models/: __init__.py  baselines.py  graph_gps.py  graph_transformer.py  heuristic.py  multiscale_pool.py
src/neural_simulator/simulation/: __init__.py  generator.py  scenario.py  simulator.py
src/neural_simulator/training/: __init__.py  graph_transformer.py
