[project]
name = "neural-simulator"
version = "0.1.0"
description = "Graph Transformer surrogate POC for SimPy supply-chain simulations"
readme = "README.md"
authors = [
    { name = "rudigunn", email = "hasansamimetin@hotmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.8",
    "rich>=13.7",
    "scikit-learn>=1.5",
    "simpy>=4.1",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]
ml = [
    "torch>=2.4",
    "torch-geometric>=2.5",
    "matplotlib>=3.8",
]
baselines = [
    "xgboost>=2.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
neural-simulator = "neural_simulator.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
